--- a/templates/administration/base.html
+++ b/templates/administration/base.html
@@ -377,7 +377,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="{% url 'administration:invoice_form' %}" class="nav-link">
+                        <a href="{% url 'administration:create_invoice' %}" class="nav-link">
                             &nbsp;&nbsp;<i class="fa-solid fa-file-invoice"></i>
                             <p>
                                 &nbsp;&nbsp;{% translate "Generate Invoice" %}
