--- a/templates/administration/view/index.html
+++ b/templates/administration/view/index.html
@@ -14,8 +14,8 @@
           href="https://cdnjs.cloudflare.com/ajax/libs/datatables.net-buttons-bs4/2.2.3/buttons.bootstrap4.min.css"
           integrity="sha512-qjgDB3iTYTDAAZDtyv6xdGedzfFon3y1yjE/yI2R7HuxKEsY50aXysYFrb2hP3UZbHKiNWKj8tEIhXXFyCi0cA=="
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
-  <!-- Ionicons -->
-  <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+    <!-- Ionicons -->
+    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 {% endblock %}
 
 {% block body %}
@@ -48,6 +48,12 @@
 
         <!-- Main content -->
         <section class="content">
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="alert {% if message.tags %}alert-{% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}danger{% else %}{{ message.tags }}{% endif %}{% endif %} alert-dismissible"
+                         role="alert">{{ message }}</div>
+                {% endfor %}
+            {% endif %}
             <div class="container-fluid">
                 <!-- Small boxes (Stat box) -->
                 <div class="row">
@@ -176,7 +182,8 @@
                     <div class="col-12">
                         <div class="card">
                             <div class="card-header" id="requested_session">
-                                <h3 class="card-title">{% translate "Last 10 requested photoshoot session" %}</h3>
+                                <h3 class="card-title"
+                                    style="text-transform: uppercase; font-size: 20px !important; font-weight: bold !important;">{% translate "Last 5 Appointments" %}</h3>
                             </div>
                             <!-- /.card-header -->
                             <div class="card-body">
@@ -222,26 +229,6 @@
                                             </td>
                                             <td>{{ rs.get_staff_member_name }}</td>
                                             <td>
-                                                {#                                                {% if not rs.get_if_email_was_sent_boolean and not rs.status_changed %}#}
-                                                {#                                                    <a href="{% url 'administration:send_email' rs.id %}"#}
-                                                {#                                                       class="btn btn-primary btn-sm">#}
-                                                {#                                                        <i class="fas fa-envelope"></i>#}
-                                                {#                                                        {% translate "Send" %}#}
-                                                {#                                                    </a>#}
-                                                {#                                                {% else %}#}
-                                                {#                                                    <a href="" class="btn btn-primary btn-sm disabled">#}
-                                                {#                                                        <i class="fas fa-envelope"></i>#}
-                                                {#                                                        {% translate "Send" %}#}
-                                                {#                                                    </a>#}
-                                                {#                                                {% endif %}&nbsp;#}
-                                                {#                                                <a href="{% url 'appointment:de' rs.pk %}"#}
-                                                {#                                                   class="btn btn-success btn-sm">#}
-                                                {#                                                    <i class="fas fa-edit"></i>&nbsp;Edit#}
-                                                {#                                                </a>&nbsp;#}
-                                                {#                                                <a href="{% url 'administration:session_delete' rs.pk %}"#}
-                                                {#                                                   class="btn btn-danger btn-sm">#}
-                                                {#                                                    <i class="fas fa-trash"></i>&nbsp;Delete#}
-                                                {#                                                </a>#}
                                                 <a href="{% url 'appointment:display_appointment' rs.pk %}"
                                                    class="btn btn-info btn-sm">
                                                     <i class="fas fa-eye"></i>&nbsp;View
@@ -276,9 +263,136 @@
             </div>
             <!-- /.container-fluid -->
         </section>
+        <section class="content">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="card">
+                            <div class="card-header" id="invoices">
+                                <h3 class="card-title"
+                                    style="text-transform: uppercase; font-size: 20px !important; font-weight: bold !important;">{% translate "Last 5 Invoices" %}</h3>
+                            </div>
+                            <!-- /.card-header -->
+                            <div class="card-body">
+                                <table id="example1" class="table table-bordered table-striped">
+                                    <thead>
+                                    <tr>
+                                        <th>{% translate "Date" %}</th>
+                                        <th>{% translate "Client" %}</th>
+                                        <th>{% translate "Total" %}</th>
+                                        <th>{% translate "Ping at" %}</th>
+                                        <th>{% translate "Buzz at" %}</th>
+                                        <th>{% translate "Email Sent" %}</th>
+                                        <th>{% translate "Status" %}</th>
+                                        <th>{% translate "Actions" %}</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    {% for rs in invoices %}
+                                        <tr>
+                                            <td>{{ rs.created_at|date }}</td>
+                                            <td>{{ rs.client.get_short_name }}</td>
+                                            <td>${{ rs.total_amount }}</td>
+                                            <td>
+                                                <a href="mailto:{{ rs.client.email }}">
+                                                    {{ rs.client.email }}
+                                                </a>
+                                            </td>
+                                            <td>
+                                                {% if rs.client.phone_number %}
+                                                    <a href="tel:{{ rs.client.phone_number }}">
+                                                        {{ rs.client.phone_number }}
+                                                    </a>
+                                                {% else %}
+                                                    N/A
+                                                {% endif %}
+                                            </td>
+                                            <td>
+                                                {{ rs.get_if_email_sent }}
+                                            </td>
+                                            <td>
+                                                <form action="{% url 'administration:update_invoice_status' rs.invoice_number %}"
+                                                      method="post">
+                                                    {% csrf_token %}
+                                                    <label>
+                                                        <select name="status" onchange="this.form.submit()">
+                                                            {% for status, status_display in rs.INVOICE_STATUS_CHOICES %}
+                                                                <option value="{{ status }}"
+                                                                        {% if rs.status == status %}selected{% endif %}>
+                                                                    {{ status_display }}
+                                                                </option>
+                                                            {% endfor %}
+                                                        </select>
+                                                    </label>
+                                                </form>
+                                            </td>
+
+                                            <td style="display: flex; flex-direction: row; justify-content: space-between;">
+                                                {% if not rs.email_sent or not rs.status_changed %}
+                                                    <a href="{% url 'administration:send_invoice' rs.invoice_number %}"
+                                                       class="btn btn-primary btn-sm">
+                                                        <i class="fas fa-envelope"></i>
+                                                        {% translate "Send" %}
+                                                    </a>
+                                                {% else %}
+                                                    <a href="" class="btn btn-primary btn-sm disabled">
+                                                        <i class="fas fa-envelope"></i>
+                                                        {% translate "Send" %}
+                                                    </a>
+                                                {% endif %}
+                                                <a href="{% url 'administration:edit_invoice' rs.invoice_number %}"
+                                                   class="btn btn-success btn-sm">
+                                                    <i class="fas fa-edit"></i>Edit
+                                                </a>
+                                                <a href="{% url 'administration:delete_invoice' rs.invoice_number %}"
+                                                   class="btn btn-danger btn-sm">
+                                                    <i class="fas fa-trash"></i>Delete
+                                                </a>
+                                                <a href="{% url 'administration:view_invoice' rs.invoice_number %}"
+                                                   class="btn btn-info btn-sm">
+                                                    <i class="fas fa-eye"></i>View
+                                                </a>
+                                            </td>
+                                        </tr>
+                                    {% endfor %}
+                                    </tbody>
+                                    <tfoot>
+                                    <tr>
+                                        <th>{% translate "Date" %}</th>
+                                        <th>{% translate "Client" %}</th>
+                                        <th>{% translate "Total" %}</th>
+                                        <th>{% translate "Ping at" %}</th>
+                                        <th>{% translate "Buzz at" %}</th>
+                                        <th>{% translate "Email Sent" %}</th>
+                                        <th>{% translate "Status" %}</th>
+                                        <th>{% translate "Actions" %}</th>
+                                    </tr>
+                                    </tfoot>
+                                </table>
+                            </div>
+                            <!-- /.table-responsive -->
+                        </div>
+                        <!-- /.card -->
+                    </div>
+                    <!-- /.col -->
+                </div>
+                <!-- /.row -->
+            </div>
+            <!-- /.container-fluid -->
+        </section>
     </div>
 {% endblock %}
 {% block customJS %}
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const messageElements = document.querySelectorAll('.alert-dismissible');
+            setTimeout(function () {
+                messageElements.forEach(function (element) {
+                    element.style.display = 'none';
+                });
+            }, 3000);
+        });
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/js/jquery.dataTables.min.js"
             integrity="sha512-BkpSL20WETFylMrcirBahHfSnY++H2O1W+UnEEO4yNIl+jI2+zowyoGJpbtk6bx97fBXf++WJHSSK2MV4ghPcg=="
             crossorigin="anonymous" referrerpolicy="no-referrer"></script>
