Force menu to appear on load

--- a/templates/homepage/base.html
+++ b/templates/homepage/base.html
@@ -54,7 +54,7 @@
 <!-- Page Preloder
 <div id="preloder">
    <div class="loader"></div>
-</div>-->
+</div> -->
 
 <!-- Clarity tracking code for https://tchiiz.com/ -->
 <script>
@@ -100,7 +100,7 @@
 
 
         {% block login %}
-            <li><a href="{% url 'homepage:services_offered' %}">{% trans "Appointments" %}</a></li>
+            <li><a href="{% url 'homepage:services_offered' %}">{% trans "Book Us Now" %}</a></li>
 
             <li>
                 <a href="#">{% trans "Login & Register" %}</a>
