--- a/templates/homepage/base.html
+++ b/templates/homepage/base.html
@@ -98,12 +98,23 @@
             <a href="{% url 'pf:index_portfolio' %}">{% trans "Portfolio" %}</a>
         </li>
 
+        <li>
+            <a href="#">{% trans "Legal" %}</a>
+            <ul class="sub-menu">
+                <li><a href="{% url 'homepage:privacy_policy' %}">{% trans "Privacy Policy" %}</a></li>
+                <li><a href="{% url 'homepage:terms_and_conditions' %}">{% trans "Terms & Conditions" %}</a></li>
+            </ul>
+        </li>
 
         {% block login %}
             <li><a href="{% url 'homepage:services_offered' %}">{% trans "Book Us Now" %}</a></li>
 
             <li>
-                <a href="#">{% trans "Login & Register" %}</a>
+                {% if request.user.is_authenticated %}
+                    <a href="#">{% trans "Hello" %}, {{ request.user.get_short_name }}</a>
+                {% else %}
+                    <a href="#">{% trans "Login & Register" %}</a>
+                {% endif %}
                 <ul class="sub-menu">
                     {% if not request.user.is_authenticated %}
                         <li><a href="{% url 'client:login' %}">{% trans "Sign In" %}</a></li>
@@ -120,13 +131,6 @@
                 </ul>
             </li>
         {% endblock %}
-        <li>
-            <a href="#">{% trans "Legal" %}</a>
-            <ul class="sub-menu">
-                <li><a href="{% url 'homepage:privacy_policy' %}">{% trans "Privacy Policy" %}</a></li>
-                <li><a href="{% url 'homepage:terms_and_conditions' %}">{% trans "Terms & Conditions" %}</a></li>
-            </ul>
-        </li>
         <li>
             <div class="language_fr ml-auto">
                 {% get_current_language as LANGUAGE_CODE %}
