--- a/static/homepage/css/booking_btn.css
+++ b/static/homepage/css/booking_btn.css
@@ -1,43 +1,56 @@
-.booking-section {
+.booking-prompt {
     display: flex;
-    justify-content: center;
+    width: 100%;
+    background-color: #262626;
+    color: white;
+    height: 100px;
     align-items: center;
-    height: 95vh;
-    background-color: #000; /* Black background */
+    justify-content: center;
+    padding: 20px;
+    /* add a 20 px gap between elements */
+    gap: 20px;
+    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
 }
 
-.booking-btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    text-align: center;
+.booking-prompt .content-booking p {
+    margin: 0;
+    font-size: 14px;
 }
 
-.btn-book-now {
-    padding: 15px 30px;
-    font-size: 20px;
-    font-weight: bold;
-    color: #000; /* Dark text for contrast */
-    background-color: #f8f9fa; /* Light background for visibility */
+.booking-prompt .actions button {
+    background-color: #4CAF50;
+    color: white;
     border: none;
-    border-radius: 5px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    transition: all 0.3s ease;
-    text-transform: uppercase;
+    padding: 10px 20px;
+    text-align: center;
     text-decoration: none;
     display: inline-block;
+    font-size: 14px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 5px;
 }
 
-.btn-book-now:hover, .btn-book-now:focus {
-    background-color: #e2e6ea; /* Slightly darker on hover */
-    color: #000;
-    text-decoration: none;
-    transform: scale(1.05);
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+/* responsive */
+@media (max-width: 550px) {
+    .booking-prompt {
+        flex-direction: column;
+        height: auto;
+    }
+
+    .booking-prompt .content-booking {
+        margin-bottom: 5px;
+    }
+
+    .booking-prompt .actions {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .booking-prompt .actions button {
+        width: 100%;
+        padding: 5px 8px;
+    }
 }
 
-.btn-book-now:active {
-    background-color: #dae0e5; /* Even darker when active */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-}
