--- a/templates/homepage/index.html
+++ b/templates/homepage/index.html
@@ -8,6 +8,7 @@
 {% endblock %}
 {% block priceTableCSS %}
     <link rel="stylesheet" type="text/css" href="{% static 'homepage/css/homepage.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'homepage/css/booking_btn.css' %}"/>
 {% endblock %}
 {% block description %}
     {% trans "Professional photography services for all occasions - portraits, landscapes, events. High-quality results and personalized attention." %}
@@ -33,68 +34,15 @@
             {% endfor %}
         </div>
     </div>
-    <!-- Hero section end  -->
-
-    {#    <!-- Promotion Section -->#}
-    {#    <section class="booking-section">#}
-    {#        <div class="container">#}
-    {#            <div class="booking-btn">#}
-    {#                <a href="{% url 'homepage:services_offered' %}"#}
-    {#                   class="btn btn-primary btn-xl js-scroll-trigger btn-book-now">#}
-    {#                    {% trans "Book Us Now" %}#}
-    {#                </a>#}
-    {#            </div>#}
-    {#        </div>#}
-    {#    </section>#}
-    <!-- Promotion Section finished-->
-    {##}
-    {#    <!-- Intro section   -->#}
-    {#    <section class="intro-section">#}
-    {#        <div class="intro-warp">#}
-    {#            <div class="container-fluid">#}
-    {#                <div class="row">#}
-    {#                    <div class="col-xl-8 col-lg-7 p-0">#}
-    {#                        <div class="intro-text">#}
-    {#                            <h1 style="padding-left: 5px; padding-right: 5px; font-size:38px;">#}
-    {#                                {% trans "My name is Roos Laurore" %}.#}
-    {#                            </h1>#}
-    {#                            <h2 style="padding-left: 5px; padding-right: 5px; font-size:38px;">#}
-    {#                                {% trans "I’m a photographer" %}</h2>#}
-    {#                            <p>#}
-    {#                                {% blocktranslate %}#}
-    {#                                    Born in the 90's, I am very passionate about everything related to art, music and#}
-    {#                                    photography. I spent 1 year in France doing photography and sharing with others in#}
-    {#                                    the field. I learned how to use Photoshop, and I'm really good at it. While in#}
-    {#                                    France, I landed my first wedding gig on a yatch. I am actually interested in#}
-    {#                                    computer science and long-term investing. I'm planning to travel a little in the#}
-    {#                                    next years in Indonesia, Greece and China. Long-term goal: Digital Nomad.#}
-    {#                                {% endblocktranslate %}#}
-    {#                            </p>#}
-    {#                            <a href="{% url 'pf:index_portfolio' %}"#}
-    {#                               class="sp-link">{% trans "Take a look @my portfolio" %}</a>#}
-    {#                        </div>#}
-    {#                    </div>#}
-    {#                    <div class="col-xl-6 col-lg-5 p-0">#}
-    {#                        <div class="skill-warp">#}
-    {#                            <div class="single-progress-item">#}
-    {#                                <div class="progress-bar-style" data-progress="95"></div>#}
-    {#                                <p>{% trans "Business" %}</p>#}
-    {#                            </div>#}
-    {#                            <div class="single-progress-item">#}
-    {#                                <div class="progress-bar-style" data-progress="100"></div>#}
-    {#                                <p>{% trans "Passion" %}</p>#}
-    {#                            </div>#}
-    {#                            <div class="single-progress-item">#}
-    {#                                <div class="progress-bar-style" data-progress="90"></div>#}
-    {#                                <p>{% trans "Travels" %}</p>#}
-    {#                            </div>#}
-    {#                        </div>#}
-    {#                    </div>#}
-    {#                </div>#}
-    {#            </div>#}
-    {#        </div>#}
-    {#    </section>#}
-    {#    <!-- Intro section end  -->#}
+    <div id="bookingPrompt" class="booking-prompt">
+        <div class="content-booking">
+            <p>Ready to capture beautiful moments?</p>
+            <p>Book your photography session with us today!</p>
+        </div>
+        <div class="actions">
+            <button type="button" onclick="location.href='{% url 'homepage:services_offered' %}'">Book Now</button>
+        </div>
+    </div>
 {% endblock %}
 
 {% block customJS %}
