--- a/templates/homepage/base.html
+++ b/templates/homepage/base.html
@@ -38,7 +38,7 @@
     {% block customCSS %}
         <link rel="stylesheet" type="text/css" href="{% static 'homepage/css/styles.css' %}"/>{% endblock %}
     {% block priceTableCSS %}{% endblock %}
-    <!-- Google font -->
+    <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i&display=swap"
           rel="stylesheet">
 
