--- a/templates/administration/base.html
+++ b/templates/administration/base.html
@@ -431,7 +431,7 @@
     <!-- /.content-wrapper -->
     <footer class="main-footer">
         <div class="copyright" id="copyright">
-            Copyright &copy;<script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script>
+            Copyright &copy; 2021 - {% now "Y" %}
             All rights reserved | TCHIIZ Studio | <a href="https://adamspierredavid.com" target="_blank">APD</a>
         </div>
     </footer>
