--- a/templates/administration/email_template/session_request_received.html
+++ b/templates/administration/email_template/session_request_received.html
@@ -388,7 +388,7 @@
                 <tr>
                     <td bgcolor="#ffffff" align="center"
                         style="padding: 30px 30px 30px 30px; color: #666666; font-family: Helvetica, Arial, sans-serif; font-size: 14px; font-weight: 400; line-height: 18px;">
-                        <p style="margin: 0;">Copyright &copy;<script>document.write(new Date().getFullYear());</script>
+                        <p style="margin: 0;">Copyright &copy;2019 - {% now "Y" %}
                             {% trans 'All rights reserved' %} | <a href="https://tchiiz.com" target="_blank"
                                                                    style="text-decoration: none">Tchiiz Studio</a>
                             | {% trans 'Made with love by' %} <a
