--- a/templates/homepage/base.html
+++ b/templates/homepage/base.html
@@ -185,7 +185,7 @@
                 </div>
                 <div class="col-md-6 order-2 order-md-1">
                     <div class="copyright">
-                        Copyright &copy;<script>document.write(new Date().getFullYear());</script>
+                        Copyright &copy;2019 - {% now "Y" %}
                         {% trans 'All rights reserved' %} | Tchiiz Studio | {% trans 'Made with' %}
                         <i class="fa fa-heart-o" aria-hidden="true">{% trans 'Love' %}</i> {% trans "by" %} <a
                             href="https://adamspierredavid.com" target="_blank">APD</a>
