updated email in privacy policy

--- a/templates/legal/privacy_policy.html
+++ b/templates/legal/privacy_policy.html
@@ -373,8 +373,10 @@
                             {% endblocktranslate %}
                         </p>
                         <ul>
-                            <li>{% trans "By email:" %}
-                                <a href="mailto:adamspd.webmaster@gmail.com" target="_blank">[email protected]</a>
+                            <li>
+                                <a href="mailto:tchiiz.web.studio%40gmail.com" target="_blank">
+                                    {% trans "By email" %}
+                                </a>
                             </li>
                             <li>
                                 {% trans "By visiting this page on our website:" %}
