Added captcha to contact form

--- a/templates/static_pages_and_forms/success.html
+++ b/templates/static_pages_and_forms/success.html
@@ -67,7 +67,7 @@
                         {% trans "Your contact information and message was successfully submitted." %}
                     </h2>
                     <div class="alert-warning" style="text-align: center; font-size: medium">
-                        {% trans 'Wanna book me' %} ? {% trans 'Click' %} <a href="{% url 'client:book_me' %}">
+                        {% trans 'Wanna book me' %} ? {% trans 'Click' %} <a href="{% url 'homepage:services_offered' %}">
                         {% trans "here" %}
                     </a>
                     </div>
