--- a/templates/administration/base.html
+++ b/templates/administration/base.html
@@ -376,14 +376,14 @@
                             </p>
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a href="{% url 'administration:create_invoice' %}" class="nav-link">
-                            &nbsp;&nbsp;<i class="fa-solid fa-file-invoice"></i>
-                            <p>
-                                &nbsp;&nbsp;{% translate "Generate Invoice" %}
-                            </p>
-                        </a>
-                    </li>
+{#                    <li class="nav-item">#}
+{#                        <a href="{% url 'administration:create_invoice' %}" class="nav-link">#}
+{#                            &nbsp;&nbsp;<i class="fa-solid fa-file-invoice"></i>#}
+{#                            <p>#}
+{#                                &nbsp;&nbsp;{% translate "Generate Invoice" %}#}
+{#                            </p>#}
+{#                        </a>#}
+{#                    </li>#}
                     <li class="nav-item">
                         <a href="{% url 'administration:help' %}" class="nav-link">
                             &nbsp;&nbsp;<i class="fa-solid fa-hand"></i>
