--- a/templates/administration/base.html
+++ b/templates/administration/base.html
@@ -64,7 +64,7 @@
                 <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
             </li>
             <li class="nav-item d-none d-sm-inline-block">
-                <a href="" class="nav-link">{% translate "Homepage" %}</a>
+                <a href="{% url 'administration:index' %}" class="nav-link">{% translate "Homepage" %}</a>
             </li>
             <li class="nav-item d-sm-inline-block">
                 <a href="{% url 'client:logout' %}" class="nav-link">{% translate "Logout" %}</a>
